Merge upgrade to Groovy 3
This commit merges the Groovy 3 runtime into Nextflow. It also allows
the compilation and execution with Java VM later than 8 (up to 14).