@@ -49,6 +49,7 @@ allprojects {
     apply plugin: 'java'
     apply plugin: 'java-test-fixtures'
     apply plugin: 'idea'
+    apply plugin: 'groovy'
 
     version = new File('VERSION').text.trim()
     group = 'io.nextflow'
@@ -77,14 +78,12 @@ allprojects {
 
     dependencies {
         // test configuration
-
-        testFixturesCompile ("org.codehaus.groovy:groovy-test:2.5.11") { exclude group: 'org.codehaus.groovy' }
-        testFixturesCompile ("cglib:cglib-nodep:2.2")
-        testFixturesCompile ("org.objenesis:objenesis:2.1")
-        testFixturesCompile ("org.spockframework:spock-core:1.3-groovy-2.5") { exclude group: 'org.codehaus.groovy' }
+        testFixturesCompile ("org.codehaus.groovy:groovy-test:3.0.5") { exclude group: 'org.codehaus.groovy' }
+        testFixturesRuntime ("cglib:cglib-nodep:3.3.0")
+        testFixturesRuntime ("org.objenesis:objenesis:3.1")
+        testFixturesCompile ("org.spockframework:spock-core:2.0-M3-groovy-3.0") { exclude group: 'org.codehaus.groovy'; exclude group: 'net.bytebuddy' }
+        testFixturesCompile ('org.spockframework:spock-junit4:2.0-M3-groovy-3.0') { exclude group: 'org.codehaus.groovy'; exclude group: 'net.bytebuddy' }
         testFixturesCompile 'com.google.jimfs:jimfs:1.1'
-
-
         // see https://docs.gradle.org/4.1/userguide/dependency_management.html#sec:module_replacement
         modules {
             module("commons-logging:commons-logging") { replacedBy("org.slf4j:jcl-over-slf4j") }
@@ -92,10 +91,14 @@ allprojects {
 
         // Documentation required libraries
         groovyDoc 'org.fusesource.jansi:jansi:1.11'
-        groovyDoc "org.codehaus.groovy:groovy-groovydoc:2.5.11"
-        groovyDoc "org.codehaus.groovy:groovy-ant:2.5.11"
+        groovyDoc "org.codehaus.groovy:groovy-groovydoc:3.0.5"
+        groovyDoc "org.codehaus.groovy:groovy-ant:3.0.5"
     }
 
+    test {
+        useJUnitPlatform()
+    }
+    
     // this is required due to this IDEA bug
     // https://youtrack.jetbrains.com/issue/IDEA-129282
     sourceSets {
@@ -133,7 +136,6 @@ allprojects {
                     '--add-opens=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED',
                     '--add-opens=java.base/sun.net.www.protocol.file=ALL-UNNAMED',
                     '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
-                    '--add-modules=java.xml.bind,java.activation',
             ])
         }
     }
